--- a/time-tracker/package.json
+++ b/time-tracker/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.15.0",
+    "topbar": "^2.0.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
